--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<title>Week 4</title>
 </head>
 <body>
+
 	<div class="container" style="background:transparent;">
 	<header class="jumbotron text-center "> <h1>Crystals Collector!</h1></header>
 
@@ -38,8 +39,22 @@
 	<h2> Score: <span id="total-score"></span></h2>
 	<h2> Wins: <span id="wins"></span></h2>
 	<h2> Losses: <span id="losses"></span></h2>
+
+	<video autoplay loop>
+ 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
+ 	<video autoplay loop>
+ 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
+ 	<video autoplay loop>
+ 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
+ 	<video autoplay loop>
+ 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
+
+ 	<p style="clear: both;">
 	</div>
 	</div>
+	
+
+	
 
 
 
