--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+ 
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="assets/javascript/game.js"></script>
 
@@ -14,18 +15,28 @@
 	<title>Week 4</title>
 </head>
 <body>
+<audio autoplay loop>
+<source src="assets/images/mine.mp3" type="audio/mp3"></audio>
 
-	<div class="container" style="background:transparent;">
-	<header class="jumbotron text-center "> <h1>Crystals Collector!</h1></header>
+	<header> <h1>Crystals Collector!</h1></header>
 
 	<div class="row" id="instructions" style="background-color: #990000;">
-		<div class="col-md-6"> 
 			<p>
 			Goal: If your total score matches the Magic Number, you win!
 			Your game will hide this amount until the player clicks a crystal.</p>
 			<p>Click on the crystals to increase your score. Be careful...if your score is greater than the Magic Number, you lose!</p> 
 		</div>
+	<div class="row" style="background-color: white;">
 		<div class="col-md-6">
+			<div>
+				<h2> MAGIC NUMBER: <span id="randomNum"></span></h2>
+				<h2> Score: <span id="total-score"></span></h2>
+				<h2> Wins: <span id="wins"></span></h2>
+				<h2> Losses: <span id="losses"></span></h2>
+
+			</div>
+  		</div>	
+  		<div class="col-md-6">
 			<div class="btn-group">
   				<button id="jewel1"></button>
  				<button id="jewel2"></button> 			
@@ -35,37 +46,17 @@
   		</div>	
 	</div>
 	<div class="row" style="background-color: white;">
-	<h2> MAGIC NUMBER: <span id="randomNum"></span></h2>
-	<h2> Score: <span id="total-score"></span></h2>
-	<h2> Wins: <span id="wins"></span></h2>
-	<h2> Losses: <span id="losses"></span></h2>
+		<video autoplay loop>
+	 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
+	 	<video autoplay loop>
+	 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
+	 	<video autoplay loop>
+	 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
+	 	<video autoplay loop>
+	 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
 
-	<video autoplay loop>
- 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
- 	<video autoplay loop>
- 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
- 	<video autoplay loop>
- 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
- 	<video autoplay loop>
- 	<source src="assets/images/giphy.mp4" type="video/mp4"></video>
-
- 	<p style="clear: both;">
-	</div>
+	 	<p style="clear: both;">
 	</div>
 	
-
-	
-
-
-
-
-
-
-
-		
-
-
-
-
 </body>
 </html>
